--- a/index.html
+++ b/index.html
@@ -3,31 +3,11 @@
 <html lang="en">
 <head>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <meta name="google-adsense-account" content="ca-pub-9657690036702429">
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Weather Website</title>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9657690036702429"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-gw-3+1f-3d+2z"
-     data-ad-client="ca-pub-9657690036702429"
-     data-ad-slot="1425266225"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9657690036702429"
-     crossorigin="anonymous"></script>
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-format="fluid"
-     data-ad-layout-key="-gw-3+1f-3d+2z"
-     data-ad-client="ca-pub-9657690036702429"
-     data-ad-slot="1425266225"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
   <!-- Styles -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
@@ -108,6 +88,24 @@
       </div>
     </section>
 
+<div class="weather-info">
+   <!-- temp, humidity, wind speed code -->
+</div>
+
+<!-- AdSense Safe Container (Between Weather Info & Forecast) -->
+<div class="ad-container">
+  <ins class="adsbygoogle"
+       style="display:block; height:100px; text-align:center;"
+       data-ad-client="ca-pub-9657690036702429"
+       data-ad-slot="1425266225"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
+
+<div class="forecast-items-container"></div>
 
 
 
@@ -120,6 +118,23 @@
 
 
   </main>
+<!-- Search Section -->
+<div class="search-container">
+   <!-- input + button code -->
+</div>
+
+<!-- AdSense Safe Container -->
+<div class="ad-container">
+  <ins class="adsbygoogle"
+       style="display:block; height:100px; text-align:center;"
+       data-ad-client="ca-pub-9657690036702429"
+       data-ad-slot="1425266225"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
 
 
 
