--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Weather Website</title>
@@ -135,7 +135,14 @@
     (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </div>
-
+<amp-ad
+     layout="fixed"
+     width="120"
+     height="60"
+     type="adsense"
+     data-ad-client="ca-pub-9657690036702429"
+     data-ad-slot="9731131651">
+</amp-ad>
 
 
   <footer>
